--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -237,7 +237,7 @@ jobs:
       - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
         with:
-          latest-version: ${{ github.event.release.tag_name }}
+          latest-version: ${{ steps.dart_cur_version.outputs.curver}}
           release-notes: ${{ steps.micro_release_note.outputs.note }}
 
       - name: Commit updated CHANGELOG
