--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,3 +41,9 @@ jobs:
       - name: dry run dart publish
         run: |
           dart pub publish --dry-run
+
+      # - name: publish m3o-dart package
+      #   uses: k-paxian/dart-package-publisher@master
+      #   with:
+      #     accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
+      #     refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
