--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -223,10 +223,11 @@ jobs:
       #     draft: false
       #     prerelease: false
 
-      - uses: ncipollo/release-action@v1
+      - uses: ncipollo/release-action@v1.9.0
         with:
           tag: ${{ steps.dart_cur_version.outputs.curver}} 
           commit: main
+          generateReleaseNotes: true
           body: |
             ${{ steps.micro_release_note.outputs.note }}
           token: ${{ secrets.API_TOKEN_GITHUB }}
