cancel delete .git
Signed-off-by: Daniel Joudat <danieljoudat@gmail.com>

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -130,7 +130,7 @@ jobs:
       - name: house cleaning remove unnecessary files/folders
         working-directory: m3o-dart
         run: |
-          rm -rf .dart_tool .git .gitignore .packages pubspec.lock
+          rm -rf .dart_tool .gitignore .packages pubspec.lock
       
       - name: Add & Commit
         uses: EndBug/add-and-commit@v9.0.0
