--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,12 +22,19 @@ jobs:
           release-notes: ${{ github.event.release.body }}
           path-to-changelog: '/github/workspace/m3o-dart/CHANGELOG.md'
 
-      - name: Commit updated CHANGELOG
-        uses: stefanzweifel/git-auto-commit-action@v4
+      # - name: Commit updated CHANGELOG
+      #   uses: stefanzweifel/git-auto-commit-action@v4
+      #   with:
+      #     branch: ${{ github.event.release.target_commitish }}
+      #     commit_message: Update CHANGELOG
+      #     file_pattern: CHANGELOG.md
+      
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v9.0.0
         with:
-          branch: ${{ github.event.release.target_commitish }}
-          commit_message: Update CHANGELOG
-          file_pattern: CHANGELOG.md
+          cwd: m3o-dart
+          message: Update CHANGELOG
+          pathspec_error_handling: exitImmediately
 
       - name: publish m3o-dart package
         uses: GWT-M3O-TEST/m3o-publish-dart-action@main
